Fix: hide horizontal scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,7 @@ body {
   align-items: center;
   background-color: var(--primary-background-color);
   color: var(--body-text-color);
+  overflow-x: hidden;
 }
 
 header {
